fix the height of quote and alignment of quote and the main container

--- a/src/css/common.css
+++ b/src/css/common.css
@@ -12,10 +12,13 @@
   --dark-grey: #111111;
 
   --transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  --animation-fast: --container-max-width: 375px;
+  --animation-fast: --container-max-width 0.5s ease-in-out;
   --tablet-max-width: 768px;
   --desktop-max-width: 1440px;
+  --container-max-width: 375px;
   --mobile-menu-max-width: 210px;
+
+  --desktop-card-height: 242px;
 
   --box-shadow: -3px 4px 35px -5px rgba(66, 68, 90, 1);
   --box-shadow-light: -3px 4px 35px -16px rgba(66, 68, 90, 1);
@@ -138,7 +141,7 @@ button {
       }
     }
   }
-}    
+}
 
 .fade-item {
   transition: 0.5s all ease-in-out;
@@ -161,7 +164,8 @@ button {
 
 .main-content {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
+  gap: 32px;
 }
 
 @media screen and (min-width: 1440px) {
@@ -170,6 +174,10 @@ button {
   }
 
   .aside {
-    order: 1;
+    display: flex;
+    flex-direction: column;
+    gap: 32px;
+    flex-grow: 1;
+    min-width: 444px;
   }
 }
