--- a/src/css/exercises.css
+++ b/src/css/exercises.css
@@ -282,7 +282,7 @@
 
 @media only screen and (min-width: 1440px) {
   .category-card {
-    height: 242px;
+    height: var(--desktop-card-height);
     width: 290px;
   }
 }
